Spring Boot Profile application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=EN,dog
+spring.profiles.active=EN,dog,qa
 my.username = superuser
 my.password = dbPassword
 my.jdbcURL = someURLForDB
